--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -109,12 +109,12 @@
 
 
                 <div class="social-links">
-                    <iframe width="620" height="280" src="https://www.youtube.com/embed/pNwj3goP7Io?autoplay=1&mute=1&loop=1"></iframe>
+                    <iframe width="550" height="230" src="https://www.youtube.com/embed/pNwj3goP7Io?autoplay=1&mute=1&loop=1"></iframe>
                     <h3>Find me on...</h3>
                     <span>
                         <a target="_blank" href="https://youtube.com/user/D3vil177" id="icon"><i class="fa fa-youtube-play" style="font-size:36px"></i></a>
                         <a target="_blank" href="https://www.facebook.com/lim.k.yen/" id="icon"><i class="fa fa-facebook-f" style="font-size:36px"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/kwxyn/" id="icon"><i class="fa fa-instagram" style="font-size:36px"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/kwxyn/"id="icon"><i class="fa fa-instagram" style="font-size:36px"></i></a>
                     </span>
                 </div>
             </div>
@@ -151,8 +151,10 @@
         <div class="main-container">
             <a href=""></a>
             <h3 style="text-align: center;">Contact</h3>
+            <a name="contact"></a>
+            <p style="text-align: center; padding:20px;"> Email: kwanxcsv@gmail.com | kylim022@mymail.sim.edu.sg</p>
 
-            <form id="contact-form" method="POST" action="{% url 'send_email' %}">
+            <!-- <form id="contact-form" method="POST" action="{% url 'send_email' %}">
                 {% csrf_token %}
                 <a name="contact"></a>
 
@@ -169,7 +171,7 @@
                 <textarea required class="input-field" name="message"></textarea>
 
                 <input id="submit-btn" type="submit" value="Send">
-            </form>
+            </form> -->
         </div>
     </section>
 
